Mon Jul 30 14:29:51 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Update test for displaying a facet range.

Mon Jul 30 14:29:08 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Update documentation comment for
	  query_facet() method.

Mon Jul 30 12:38:25 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Fix bug with handling of facets of
	  type 'float'.

Fri Jul 27 02:04:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/fieldactions.py,secore/searchconnection.py: Add facet
	  searching.

Fri Jul 27 01:13:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: For facet selection - don't return
	  facets which only have 1 or 0 values.

Thu Jul 26 17:02:33 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/datastructures.py: Warn early if a field is too long:
	  we might be able to replace this by hashing if necessary, but
	  this is better than waiting for the xapian error in this case.

Wed Jul 25 08:37:51 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Add documentation on indexing and
	  searching facets.

Wed Jul 25 03:06:19 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Correct small initialisation bug.

Wed Jul 25 01:53:51 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/: Change string marshalling to use xapian's stuff; cuts
	  down code, uses a more compact representation, and is compatible
	  with the facet range calculation stuff.  Update tests to cover
	  the facet calculation stuff in more detail (but still need more
	  coverage).  Fix bug with converting string range to a numeric
	  range more than once if get_suggested_facets is called
	  repeatedly.

Tue Jul 24 10:32:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>
